Revision history for {{$dist->name}}

{{$NEXT}}
    - kwalitee-metrics script now includes the module version as well as the
      name, for each metric provided

1.18      2014-01-22 04:47:40Z
    - updated list of available metrics

1.17      2013-10-20 21:49:31Z
    - oops, fixed tests that break when AUTHOR_TESTING is not set

1.16      2013-10-20 21:44:53Z
    - now printing even more diagnostics on error (as much as we have
      available)

1.15      2013-09-25 03:12:20Z
    - re-release with fixed compile test

1.14      2013-09-04 01:38:29Z
    - updated inaccurate test prereq

1.13      2013-08-21 20:03:31Z
    - added missing abstract for kwalitee-metrics script
    - no longer issuing a warning if the test is running from xt/ (see v1.10)

1.12      2013-08-01 23:09:47Z
    - adjusted tests to compensate for changes made in Module::CPANTS::Analyse
      0.88/0.90_01

1.11      2013-07-30 00:27:36Z
    - added missing kwalitee-metrics executable to the distribution

1.10      2013-07-29 00:18:31Z
    - we now issue a warning if running when neither AUTHOR_TESTING or
      RELEASE_TESTING environment variables or set
    - test level adjusted, so location of failing test is correct
    - include a script to dump all metrics ("kwalitee-metrics")

1.09      2013-07-18 17:34:33Z
    - the has_test_pod, has_test_pod_coverage tests have been removed - they
      are classified as 'extra', and have been largely considered to be a bad
      idea anyway (these are often shipped as, and ought to be, in xt/)
    - the extractable test has been removed, as it does nothing in dists
      before there is a tarball present
    - new tests have been added: all standard kwalitee tests that can be run
      on a bare distribution without a tarball

1.08      2013-07-16 00:59:47Z
    - documentation fixed to reflect what indicators are actually available
    - metric names are no longer hardcoded, so Module::CPANTS::Analyse has
      more freedom to add and remove metrics
